--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha --require @babel/register",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,6 +35,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/register": "^7.22.5",
     "chai": "^4.3.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
